Bring SonarCloud rating back to green (#1619)
Signed-off-by: Lukáš Petrovický <lukas@petrovicky.net>